--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 577ecd0
+	base = 2f04f10
 	trimbase = 
 	parent = release/dashing/pcl_msgs
-	previous = 
+	previous = 577ecd0
