--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 5aa7c9b
+	base = 433f403
 	trimbase = 
 	parent = debian/dashing/pcl_msgs
-	previous = 
+	previous = 5aa7c9b
