--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 4723fc6
+	base = 504ce11
 	trimbase = 
 	parent = release/eloquent/pcl_msgs
-	previous = 
+	previous = 4723fc6
