--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f0584fe
+	base = 5d7edf8
 	trimbase = 
 	parent = debian/eloquent/pcl_msgs
-	previous = 
+	previous = f0584fe
