--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 085af2d
+	base = 1d7ce52
 	trimbase = 
 	parent = release/foxy/pcl_msgs
-	previous = 
+	previous = 085af2d
