--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 653026b
+	base = 63073ca
 	trimbase = 
 	parent = debian/foxy/pcl_msgs
-	previous = 
+	previous = 653026b
