--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/pcl_msgs
-	previous = 
-	base = 2b53dd6
+	previous = 2b53dd6
+	base = 7240d36
 	trim = 
 	trimbase = 
