--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/pcl_msgs
-	previous = 
-	base = 99d78f0
+	previous = 99d78f0
+	base = 744bf84
 	trim = 
 	trimbase = 
