--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/pcl_msgs
-	previous = 
-	base = 0436b24
+	previous = 0436b24
+	base = 9776546
 	trim = 
 	trimbase = 
