--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"1.0.0-4": ["Thu Mar 11 2021", "Paul Bovbel", "paul@bovbel.com"], "1.0.0-3": ["Mon Mar 08 2021", "Paul Bovbel", "paul@bovbel.com"]}
+{"1.0.0-5": ["Fri Mar 26 2021", "Paul Bovbel", "paul@bovbel.com"], "1.0.0-4": ["Thu Mar 11 2021", "Paul Bovbel", "paul@bovbel.com"], "1.0.0-3": ["Mon Mar 08 2021", "Paul Bovbel", "paul@bovbel.com"]}
