--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/pcl_msgs
-	previous = 
-	base = 1ebe71e
+	previous = 1ebe71e
+	base = 6353138
 	trim = 
 	trimbase = 
