--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/pcl_msgs
-	previous = 
-	base = 5a58f34
+	previous = 5a58f34
+	base = 711d4c4
 	trim = 
 	trimbase = 
