--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/pcl_msgs
-	previous = 
-	base = cea166e
+	previous = cea166e
+	base = 2ae8c38
 	trim = 
 	trimbase = 
