--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/pcl_msgs
-	previous = 
-	base = b9b1654
+	previous = b9b1654
+	base = 9f87298
 	trim = 
 	trimbase = 
