--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"1.0.0-6": ["Tue Feb 08 2022", "Paul Bovbel", "paul@bovbel.com"]}
+{"1.0.0-7": ["Tue Apr 19 2022", "Paul Bovbel", "paul@bovbel.com"], "1.0.0-6": ["Tue Feb 08 2022", "Paul Bovbel", "paul@bovbel.com"]}
