--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/pcl_msgs
-	previous = 
-	base = 25c4b56
+	previous = 25c4b56
+	base = 1118d50
 	trim = 
 	trimbase = 
