--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/pcl_msgs
-	previous = 
-	base = b0c85a6
+	previous = b0c85a6
+	base = 37f40ff
 	trim = 
 	trimbase = 
