--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/pcl_msgs
-	previous = 
-	base = 2815a8a
+	previous = 2815a8a
+	base = 169ec98
 	trim = 
 	trimbase = 
