--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/pcl_msgs
-	previous = 
-	base = 5ec9df5
+	previous = 5ec9df5
+	base = 2ac7f21
 	trim = 
 	trimbase = 
