Store releaser history

--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"1.0.0-7": ["Tue Mar 21 2023", "Paul Bovbel", "paul@bovbel.com"]}
+{"1.0.0-8": ["Thu Apr 20 2023", "Paul Bovbel", "paul@bovbel.com"], "1.0.0-7": ["Tue Mar 21 2023", "Paul Bovbel", "paul@bovbel.com"]}
