--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/pcl_msgs
-	previous = 
-	base = 1ae224b
+	previous = 1ae224b
+	base = 2f799f2
 	trim = 
 	trimbase = 
