--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/pcl_msgs
-	previous = 
-	base = 1f3a4fd
+	previous = 1f3a4fd
+	base = 2b2409a
 	trim = 
 	trimbase = 
