--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/pcl_msgs
-	previous = 
-	base = 63649a0
+	previous = 63649a0
+	base = 061b2eb
 	trim = 
 	trimbase = 
