--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/pcl_msgs
-	previous = 
-	base = caee65f
+	previous = caee65f
+	base = b1cf638
 	trim = 
 	trimbase = 
