--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"1.0.0-8": ["Wed Mar 06 2024", "Paul Bovbel", "paul@bovbel.com"]}
+{"1.0.0-9": ["Fri Apr 19 2024", "Paul Bovbel", "paul@bovbel.com"], "1.0.0-8": ["Wed Mar 06 2024", "Paul Bovbel", "paul@bovbel.com"]}
